# slick-object-pool

./: CMakeLists.txt  DOCUMENTATION.md  README.md  REVIEW.md
include/slick/: object_pool.h
tests/: tests.cpp
